[project]
name = "shade-agent-client"
version = "0.1.0"
description = "A Shade Agent for NEAR"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "dstack-sdk>=0.5.3",
    "matplotlib>=3.10.3",
    "near-omni-client>=0.1.12",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "requests>=2.32.4",
    "scipy>=1.16.0",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = ["pytest>=8.4.1", "ruff>=0.14.11"]
